[package]
name = "fmu_rs"
version = "0.2.0"
authors = ["avrabe <ralf_beier@me.com>"]
edition = "2021"
homepage = "https://github.com/avrabe/fmu-rs.git"
repository = "https://github.com/avrabe/fmu-rs.git"
license = "MIT"
license_file = "LICENSE"
description = "fmu-rs is a Rust implementation of FullMetalUpdate which handles update for the applications on a system on which it is running."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.2.7", features = ["derive"]}
rust-ini = "0.18.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
hawkbit = { version = "0.6.0", features= ["hash-digest", "hash-md5", "hash-sha1", "hash-sha256"]}
#hawkbit = {git = "https://github.com/avrabe/hawkbit-rs", branch = "metadata_support", features= ["hash-digest", "hash-md5", "hash-sha1", "hash-sha256"]}
tokio = {version="1.28.1", features= ["full"]}
serde = "1.0.163"
serde_json = "1.0.96"
libc = "0.2.141"
ostree = { version = "0.18.0", features = ["v2021_2"]}
openat = "0.1.21"
rustbus = "0.19.2"

[dev-dependencies]
tempdir = "0.3.7"
